[package]
name = "bogon"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust library to check if an IP address is a bogon"
repository = "https://github.com/Alextopher/bogon"
readme = "README.md"
keywords = ["bogon", "bogus", "ip", "ipv4", "ipv6"]
categories = ["network-programming"]
authors = ["Christopher Mahoney"]

[dependencies]
ipnetwork = "0.20.0"
once_cell = "1.19.0"

[build-dependencies]
csv = "1.3.0"
ipnetwork = "0.20.0"
serde = { version = "1.0.199", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "ipv4"
harness = false
